tests/negative/typecheck/immutable-dereference.orng
fn main() -> Int {
    let x = 0
    let y = &x
    y^ = 4
    0
}